vlib/v/checker/tests/assign_immutable_reference_call_result_err.vv
module main

@[heap]
struct User {
mut:
	name string
}

fn rere(a &User) &User {
	return a
}

fn main() {
	ja := User{name: 'foo'}
	mut x := rere(ja)
	x.name = 'bar'
}
